--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@ hr {
   border-width: 5px;
   width: 100%;
 }
+
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+}
 /************* CLASS SELECTOR *************/
 .stu:hover{
   color: blue;
